--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.22.2",
     "fortawesome": "^0.0.1-security",
+    "jquery": "^3.7.0",
     "mapbox-gl": "^2.15.0",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^14.2.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
